...
                _crearBoton(inspeccionBloc),
                SizedBox(height: 30.0),
              ],
            ),
          ),
          GestureDetector(
            key: Key('Registrarse'),
            child: Text('Registrarse'),
            onTap: () {
              _mostrarAlertaInspector(context, inspeccionBloc);
            },
          ),
          SizedBox(height: 10.0),
...

  Widget _crearUsuario() {

    return Container(
      padding: EdgeInsets.symmetric(horizontal: 20.0),
      child: TextFormField(
        key: Key('usuario'),
        decoration: InputDecoration(
          icon: Icon(Icons.person_outline, color: Colors.deepPurple),
          hintText: 'Usuario',
          labelText: 'Usuario',
        ),
        onSaved: (value) => _usuario = value,
...

  Widget _crearPassword( ) {

    return Container(
      padding: EdgeInsets.symmetric(horizontal: 20.0),
      child: TextFormField(
        key: Key('contrasena'),
        obscureText: _obscureText,
        decoration: InputDecoration(
          icon: Icon(Icons.lock_outline, color: Colors.deepPurple),
          labelText: 'Contraseña',
          suffixIcon: IconButton(
            icon: Icon(Icons.visibility),
...
    
  }

  Widget _crearBoton( InspeccionBloc inspeccionBloc ) {

    return RaisedButton(
      key: Key('boton'),
      child: Container(
        padding: EdgeInsets.symmetric( horizontal: 80.0, vertical: 20.0),
        child: Text('Ingresar'),
      ),
      shape: RoundedRectangleBorder(
        borderRadius: BorderRadius.circular(5.0)
...
                    ),
                  ),
                  Row(
                    mainAxisAlignment: MainAxisAlignment.end,
                    children: <Widget>[
                      FlatButton(
                        key: Key('registroCancelar'),
                        child: Text('Cancelar'),
                        onPressed: () => Navigator.of(context).pop(),
                      ),
                      FlatButton(
                        key: Key('registroOK'),
                        child: Text('Ok'),
                        onPressed: () {
                          agregarUsuario(inspector, bloc);
                        },
                      ),
                    ],
...

  agregarUsuario( Inspector inspector, InspeccionBloc bloc ) async {

    if (await _usuarioUnico(inspector)) {
      bloc.agregarInspector(inspector);
      Navigator.of(context).pop();
      _showSnackBar('Se ha creado el usuario satisfactoriamente');
    } else {
      _showSnackBar('El usuario ya existe');
    }

  }

...

  }

  Widget _crearTextUsuario( Inspector inspector) {

    return TextFormField(
      key: Key('registroUsuario'),
      initialValue: inspector.usuario,
      textCapitalization: TextCapitalization.words,
      decoration: InputDecoration(
        labelText: 'Usuario',
        labelStyle: TextStyle(fontSize: 20.0)
      ),
...

  }
  
  Widget _crearTextContrasena( Inspector inspector) {

    return TextFormField(
      key: Key('registroContrasena'),
      initialValue: inspector.contrasena,
      keyboardType: TextInputType.visiblePassword,
      decoration: InputDecoration(
        labelText: 'Contraseña',
        labelStyle: TextStyle(fontSize: 20.0)
      ),
...
    }
  }

  @override
  void onLoginError() {

    _showSnackBar('No existe ese usuario, prueba de nuevo');

    setState(() {
      _isLoading = false;
    });
  }

...
