...
            right: 0.0,
            child: Container(
              padding: EdgeInsets.all(12.0),
              child: Row(
                children: <Widget>[
                  FloatingActionButton.extended(
                    key: Key('IniciarInspeccion'),
                    heroTag: UniqueKey(),
                    onPressed: (){
                      _mostrarAlertaInspeccion(context, _inspeccionBloc);
                    },
                    label: Text('Iniciar Inspeccion'),
                  ),
...
          datos.add(linea);
          
        }
      });

      List<List<dynamic>> csvData = [
        <String>["Inspeccion","Pais", "Provincia", "Direccion", "Latitud", "Longitud"],
        [inspeccion.id, inspeccion.pais, inspeccion.provincia, inspeccion.direccion, inspeccion.latitud, inspeccion.longitud],
        [],
        <String>["FACTORES"],
        <String>["Codigo", "Nombre"], 
        ...inspeccion.deficiencias.map((item) => 
                [item.factorRiesgo.idPadre.toString()+item.factorRiesgo.codigo,
...

  }

  Widget _crearSelectProvincia( InspeccionModel inspeccion, InspeccionBloc bloc) {

    return DropdownButtonFormField(
      key: Key('provinciaSelect'),
      decoration: InputDecoration(
        labelText: 'Provincia',
        labelStyle: TextStyle(fontSize: 20.0)
      ),
      value: inspeccion.provincia,
      onChanged: ( value ) => inspeccion.provincia = value,
...

  }

  Widget _creatSelectPais( InspeccionModel inspeccion ) {

    return DropdownButtonFormField(
      key: Key('paisSelect'),
      decoration: InputDecoration(
        labelText: 'País',
        labelStyle: TextStyle(fontSize: 20.0)
      ),
      value: inspeccion.pais,
      onChanged: ( value ) => inspeccion.pais = value,
      items: <String>['España']
        .map<DropdownMenuItem<String>>((String value) {
      return DropdownMenuItem<String>(
        value: value,
        child: Text(value),
      );
      }).toList(),
...
