...
  Widget _crearTextFieldRiesgo( ) {

    return TextFormField(
      initialValue: evaluacion.riesgo,
      textCapitalization: TextCapitalization.sentences,
      decoration: InputDecoration(
        labelText: 'Riesgo',
        labelStyle: TextStyle(fontSize: 20.0)
      ),
      onSaved: (value) => evaluacion.riesgo = value,
      validator: (value) {
        if ( value.length < 3 ) {
          return 'Ingrese la descripción del riesgo';
...
